# chessboards

./: README.md  stack.xml
chessboard_pose/: CMakeLists.txt  LICENSE  cmake_install.cmake  manifest.xml  package.xml
chessboard_pose/launch/: detect_4_3.launch  detect_a3_8_5.launch  detect_large.launch
chessboard_pose/src/: board_detector.cpp  checkerboard_detector2.cpp_wc
chessboard_publisher/: CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml  package.xml
chessboard_publisher/launch/: 7x4_40mm.launch  7x5_20mm.launch  9x6_20mm.launch  test_trandoforms.launch
chessboard_publisher/src/: publisher.cpp
chessboards/: CMakeLists.txt  package.xml
