<?xml version="1.0"?>
<package>
  <name>chessboard_publisher</name>
  <version>0.0.0</version>
  <description>The chessboard_publisher package publishes visual markers to RViz to show the location of a detected chessboard.</description>

  <maintainer email="cburbridge@gmail.com">chris</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>


  <export>

  </export>
</package>